Fixed hostbanner position when its invisible

--- a/shared/css/frame/SelectInfo.scss
+++ b/shared/css/frame/SelectInfo.scss
@@ -64,7 +64,9 @@
 
 		overflow: hidden;
 
-		&:not(:disabled) {
+
+		&.disabled {
+			display: none;
 			margin-bottom: 5px;
 		}
 
